2012-03-06  Pedro Alves  <palves@redhat.com>

	PR gdb/13766

	* i387-tdep.c (i387_supply_xsave): If we have an xsave buffer, and
	the register state is clear, supply explicit zero, instead of
	marking the register unavailable.

2012-02-23  Jan Kratochvil  <jan.kratochvil@redhat.com>

	PR backtrace/13716
	* infcmd.c (finish_forward): New variable frame_id, initialize it, use
	it after set_momentary_breakpoint.

2012-02-21  Jan Kratochvil  <jan.kratochvil@redhat.com>

	PR build/13638
	* configure.ac (MAKEINFO): Replace AC_CHECK_PROG by AC_ARG_VAR.
	(MAKEINFOFLAGS): Replace static string by AC_ARG_VAR.
	* configure: Regenerate.

2012-02-21  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* configure: Regenerate.
	* config.in: Regenerate.

2012-01-24  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 7.4.0.20120124-cvs.

2012-01-24  Joel Brobecker  <brobecker@adacore.com>

	GDB 7.4 released.

2012-01-24  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Change "since GDB 7.3.1" into "in GDB 7.4".

2012-01-24  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Update GDB version number to 7.4.

2012-01-14  Doug Evans  <dje@google.com>

	Restore "mt set python print-stack on|off" for 7.4.
	* NEWS: Update to indicate "mt set python print-stack" is deprecated,
	but not deleted yet, and will be gone in gdb 7.5.
	* python/python.c (maint_set_python_list, maint_show_python_list):
	New global vars.
	(maint_set_python, maint_show_python): New functions.
	(gdbpy_should_print_stack_deprecated): New global var.
	(set_maint_python_print_stack): New function.
	(show_maint_python_print_stack): New function.
	(_initialize_python): Define commands
	"mt set python print-stack on|off" and ""mt show python print-stack".

2012-01-13  Eli Zaretskii  <eliz@gnu.org>

	* gdb_curses.h (MOUSE_MOVED) [__MINGW32__]: Undefine before
	including curses.h.

2012-01-12  Pedro Alves  <palves@redhat.com>

	* i386-tdep.c (i386_frame_cache_1): Also mark the frame base as