@@ -1,3 +1,11 @@
+2012-03-13  Pedro Alves  <palves@redhat.com>
+	    Hui Zhu  <teawater@gmail.com>
+	    Yao Qi  <yao@codesourcery.com>
+
+	* remote.c (struct remote_state): New field `starting_up'.
+	(remote_start_remote): Set and clear it.
+	(remote_can_download_tracepoint): If starting up, return false.
+
 2012-03-06  Pedro Alves  <palves@redhat.com>
 
 	PR gdb/13766
